--- a/SHS.StudentPortal/SHS.StudentPortal.Blazor/SHS.StudentPortal.Blazor/Components/Layout/MainLayout.razor
+++ b/SHS.StudentPortal/SHS.StudentPortal.Blazor/SHS.StudentPortal.Blazor/Components/Layout/MainLayout.razor
@@ -53,7 +53,7 @@
             <RadzenPanelMenuItem Text="Subjects" Icon="book_6" Click="RedirectToSubjects" />
             @if(PrincipalUser?.Claims.FirstOrDefault(c => c.Type == ClaimTypes.Role)?.Value == "admin")
             {
-                <RadzenPanelMenuItem Text="Schedules" Icon="calendar_month" />
+                <RadzenPanelMenuItem Text="Schedules" Icon="calendar_month" Click="RedirectToSchedules" />
                 <RadzenPanelMenuItem Text="System Settings" Icon="settings_applications" Click="RedirectToSystemSettings" />
             }
         </RadzenPanelMenu>
@@ -189,6 +189,14 @@
             return;
         else
             NavigationManager.NavigateTo("/subjects");
+    }
+
+    private void RedirectToSchedules()
+    {
+        if (NavigationManager.Uri.ToLower().EndsWith("/schedules"))
+            return;
+        else
+            NavigationManager.NavigateTo("/schedules");
     }
     
     private void RedirectToSystemSettings()
