--- a/SHS.StudentPortal/SHS.StudentPortal.Blazor/SHS.StudentPortal.Blazor/wwwroot/app.css
+++ b/SHS.StudentPortal/SHS.StudentPortal.Blazor/SHS.StudentPortal.Blazor/wwwroot/app.css
@@ -2,6 +2,12 @@ html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
+body {
+    background: linear-gradient(to bottom, #FFF8E1, #BBDEFB); /* Light gold to soft blue */
+    height: 100%;
+    width: 100%;
+}
+
 a, .btn-link {
     color: #006bb7;
 }
